--- a/config/locales/models.tr.yml
+++ b/config/locales/models.tr.yml
@@ -5,6 +5,7 @@ tr:
       schemamigration: Schemamigration
       user: Öğrenci
       admin: Sistem Yöneticisi
+      teacher: Öğretmen
     attributes:
       user:
         id: Id
@@ -39,3 +40,19 @@ tr:
         updated_at: Updated_at
         password: Şifre
         current_password: Şu anki şifreniz
+      teacher:
+        id: Id
+        email: Eposta
+        encrypted_password: Encrypted_password
+        reset_password_token: Reset_password_token
+        reset_password_sent_at: Reset_password_sent_at
+        remember_created_at: Remember_created_at
+        sign_in_count: Sign_in_count
+        current_sign_in_at: Current_sign_in_at
+        last_sign_in_at: Last_sign_in_at
+        current_sign_in_ip: Current_sign_in_ip
+        last_sign_in_ip: Last_sign_in_ip
+        name: İsim
+        calendar: Takvim
+        created_at: Oluşturulma Tarihi
+        updated_at: Updated_at
