--- a/config/locales/models.tr.yml
+++ b/config/locales/models.tr.yml
@@ -11,6 +11,7 @@ tr:
       classroomsusers: Classroomsusers
       message: Mesaj
       announcement: Duyuru
+      attachment: Dosya
     attributes:
       user:
         id: Id
@@ -100,3 +101,17 @@ tr:
         teacher: Öğretmen
         created_at: Oluşturulma Tarihi
         updated_at: Updated_at
+      attachment:
+        id: Id
+        user_id: Öğrenci
+        user: Öğrenci
+        class_room_id: Sınıf
+        class_room: Sınıf
+        title: Başlık
+        file_file_name: File_file_name
+        file_content_type: File_content_type
+        file_file_size: File_file_size
+        file_updated_at: File_updated_at
+        created_at: Yüklenme Tarihi
+        updated_at: Updated_at
+        file: Dosya
